--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>e</h1>
-<p>e.</p>
+  <h1>e</h1>
+  <p>e.</p>
+  <button onclick="window.location.href='https://leerling.sintpaulus.eu/webleerling/start.html#!fn=llagenda';">
+    Go to Agenda
+  </button>
 </body>
 </html>
