--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <h1>e</h1>
-  <p>e.</p>
-  <button onclick="window.location.href='https://leerling.sintpaulus.eu/webleerling/start.html#!fn=llagenda';">
-    Go to Agenda
+    <button onclick="window.open('https://leerling.sintpaulus.eu/webleerling/start.html#!fn=llagenda', '_blank');">
+        Digitale Agenda
   </button>
 </body>
 </html>
