--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <button onclick="playSound()">Play Sound</button>
-
-  <!-- Audio element with the sound file -->
-  <audio id="sound" src="sci-fi-sound-effect-designed-circuits-hum-24-200825.mp3"></audio>
-
-  <script>
-    function playSound() {
-      var audio = document.getElementById('sound');
-      audio.play();
+  <p> Niels is gay</p>
     }
   </script>
 </body>
