--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <p> Niels is gay</p>
-    }
+  <title>Homo</title>
+  <p>Niels is gay</p>
   </script>
 </body>
 </html>
