--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <title>Homo</title>
   <link rel="icon" href="favicon.png" type="image/png">
-  <p>Niels is gay</p>
+  <p>Niels is gay.</p>
   </script>
 </body>
 </html>
