--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
   <title>Homo</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png?" type="image/png">
   <p>Niels is gay.</p>
   </script>
 </body>
