--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
   <title>Homo</title>
-  <link rel="icon" href="favicon.png?" type="image/png">
-  <p>Niels is gay.</p>
+  <link rel="icon" href="/favicon.png" type="image/png">
+  <p>Niels is gay</p>
   </script>
 </body>
 </html>
