--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <head>
   <title>Homo</title>
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+<body>
   <p>Niels is gay</p>
+</body>
   </script>
 </body>
 </html>
