--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-  <title>Homo</title>
+  <title>Test</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <p>Niels is gay</p>
+  <p>Belwaffle is een sleche minionderneming </p>
 </body>
   </script>
 </body>
