--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <p>Belwaffle is een sleche minionderneming </p>
+  <p>Belwaffle is een sleche minionderneming</p>
+  <p>Scentopia is beter<p>
 </body>
   </script>
 </body>
