--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-  <title>Test</title>
+  <title>Scentopia</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
