--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <p>Belwaffle is een sleche minionderneming</p>
   <p>Scentopia is beter<p>
+  <p>Hallo Harm</p>
 </body>
   </script>
 </body>
