--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-  <title>Scentopia</title>
+  <title>Harm is gay</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <p>Hallo Harm</p>
+  <p>Hallo ginger</p>
 </body>
   </script>
 </body>
