--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <p>Hallo ginger</p>
+  <h1>Hallo ginger</h1>
 </body>
   </script>
 </body>
