--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <h1>Hallo ginger</h1>
+  <h1>Kut ginger</h1>
+  <h2>Wel een lekkere zus</h2>
 </body>
   </script>
 </body>
