--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-  <title>Harm is gay</title>
+  <title>Nigsldka</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <h1>Kut ginger</h1>
-  <h2>Wel een lekkere zus</h2>
-  <h3>Ice Spice</h3>
+  <h1>Tibe heeft een mega gigantische paardenlul</h1>
 </body>
   </script>
 </body>
