--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-  <title>Nigsldka</title>
+  <title>Mathis </title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <h1>Tibe heeft een mega gigantische paardenlul</h1>
+  <h1>Mathis is slecht in basket</h1>
 </body>
   </script>
 </body>
