--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Mathis is slecht in basket</h1>
-  <a href="test.html"> eeziriair
+  <a href="subpages/test.html"> eeziriair
 </body>
   </script>
 </body>
