--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
   <title>Mathis </title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <h1>Mathis is slecht in basket</h1>
-  <a href="subpages/test.html"> eeziriair
+  <a href="p.html"> eeziriair
 </body>
   </script>
 </body>
