--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <h1>Mathis is slecht in basket</h1>
-  <a href="p.html"> eeziriair
+  <h1>Website</h1>
+  <a href="p.html"> 2de pagina
 </body>
   </script>
 </body>
