--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
+
     <head>
-  <title>Mathis </title>
+  <title>Pagina 1</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-  <h1>Website</h1>
-  <a href="p.html"> 2de pagina
+  <table bgcolor="black" width="1250">
+    <tr bgcolor="white" > 
+      <th> <a href="index.html" title=" Ga naar pagina 1"><h3 style="color:red">Pagina 1 </h3> </a>
+          <th> <a href="p.html" title=" Ga naar pagina 2"><h3>Pagina 2 </h3>
+          </th>
+    </tr>
+  </table>
+  <hr>
+
+  <p> Pagina 1
 </body>
-  </script>
-</body>
+
 </html>
