--- a/p.html
+++ b/p.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title> P </title>
-    </head>
-    <body>
-      <h1>2de pagina</h1>
-      </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pagina 2</title>
+</head>
+<body>
+<body>
+  <table bgcolor="black" width="1250">
+    <tr bgcolor="white" > 
+      <th> <a href="index.html" title=" Ga naar pagina 1"><h3>Pagina 1 </h3> </a>
+          <th> <a href="p.html" title=" Ga naar pagina 2"><h3 style="color:red">Pagina 2 </h3>
+          </th>
+    </tr>
+  </table>
+  <hr>
+</body>
 </html>
