--- a/p.html
+++ b/p.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagina 2</title>
 </head>
-<body>
-<body>
-  <table bgcolor="black" width="1250">
-    <tr bgcolor="white" > 
-      <th> <a href="index.html" title=" Ga naar pagina 1"><h3>Pagina 1 </h3> </a>
+<body style="background-color: black">
+  <table bgcolor="white" width="1250">
+    <tr bgcolor="black" > 
+      <th> <a href="index.html" title=" Ga naar pagina 1"><h3 style="color:white">Pagina 1 </h3> </a>
           <th> <a href="p.html" title=" Ga naar pagina 2"><h3 style="color:red">Pagina 2 </h3>
           </th>
     </tr>
   </table>
   <hr>
+
+  <p style="color:white"> Pagina 2
 </body>
 </html>
