--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html>
 
+<html>
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Pagina 1</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
-<body>
-  <table bgcolor="black" width="1250">
-    <tr bgcolor="white" > 
+<body style="background-color: black">
+  <table bgcolor="white" width="1250">
+    <tr bgcolor="black" > 
       <th> <a href="index.html" title=" Ga naar pagina 1"><h3 style="color:red">Pagina 1 </h3> </a>
-          <th> <a href="p.html" title=" Ga naar pagina 2"><h3>Pagina 2 </h3>
+          <th> <a href="p.html" title=" Ga naar pagina 2"><h3 style="color:white">Pagina 2 </h3>
           </th>
     </tr>
   </table>
   <hr>
 
-  <p> Pagina 1
+  <p style="color:white"> Pagina 1
 </body>
 
 </html>
