--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="background-color: black">
   <table bgcolor="white" width="1250">
     <tr bgcolor="black" > 
-      <th> <a href="https://bjarnyy.github.io/" title=" Ga naar pagina 1"><h3 style="color:red">Pagina 1 </h3> </a>
+      <th> <a href="https://bjarnyy.github.io" title=" Ga naar pagina 1"><h3 style="color:red">Pagina 1 </h3> </a>
           <th> <a href="https://bjarnyy.github.io/p" title=" Ga naar pagina 2"><h3 style="color:white">Pagina 2 </h3>
           </th>
     </tr>
