--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                           
                                       <div class="col d-flex flex-column bg_lblauw p-4">
                       <div class="content">
-                        <h2 class="pb-3">Leerlingen</h2>
+                        <h2 class="pb-3">Lowie Bossuyt</h2>
                                           <ul>
                                               <li><a href="https://login.microsoftonline.com/?whr=sgsintpaulus.eu" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Microsoft 365</a></li>
                                               <li><a href="https://leerling.sintpaulus.eu/" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Schoolware</a></li>
