--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                           
                                       <div class="col d-flex flex-column bg_lblauw p-4">
                       <div class="content">
-                        <h2 class="pb-3">Ouders</h2>
+                        <h2 class="pb-3">Harm Deceuninck</h2>
                                           <ul>
                                               <li><a href="https://ouders.sintpaulus.eu/" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Schoolware</a></li>
                                               <li><a href="https://sjb-avelgem.smartschool.be/login" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Smartschool</a></li>
