--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                       <div class="content">
                         <h2 class="pb-3">Lowie Bossuyt</h2>
                                           <ul>
-                                              <li><a href="https://login.microsoftonline.com/?whr=sgsintpaulus.eu" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Microsoft 365</a></li>
+                                              <li><a href="https://login.microsoftonline.com/?whr=sgsintpaulus.eu" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Tijs Deschamps</a></li>
                                               <li><a href="https://leerling.sintpaulus.eu/" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Schoolware</a></li>
                                               <li><a href="https://sjb-avelgem.smartschool.be/login" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Smartschool</a></li>
                                               <li><a href="https://www.scoodle.be/" target="_blank" data-wpel-link="external" rel="external noopener noreferrer">Scoodle</a></li>
