--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
+<!DOCTYPE html><html><head>
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 
 <title>Schoolware : Leerlingen</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- FIRST: STYLE SHEETS-->
-<link rel="stylesheet" type="text/css" href="https://wisa.cachefly.net/external/font-awesome/6.0.0/css/all.css">
-<link id="bootstrap-loader" rel="stylesheet" type="text/css" href="https://wisa.cachefly.net/external/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&v=2.17.0" >
+<link rel="stylesheet" type="text/css" href="css/all.css">
+<link id="bootstrap-loader" rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic&v=2.17.0">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,700,600,800&v=2.17.0">
 <link rel="stylesheet" type="text/css" href="css/theme/webleerling/style.css?v=2.17.0">
-<link rel="shortcut icon" href="./favicon.ico?v=2.17.0" type="image/x-icon" />
+<link rel="shortcut icon" href="./favicon.ico?v=2.17.0" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="css/extensible-all.css?v=2.17.0">
 <link rel="stylesheet" type="text/css" href="css/login.css?v=2.17.0">
 <link rel="stylesheet" type="text/css" href="js/ux/grid/StatusBar.css?v=2.17.0">
@@ -26,9 +23,9 @@
 <link rel="stylesheet" type="text/css" href="css/schoolware.css?v=2.17.0">
 <!-- SECOND: SCRIPTS -->
 
-<script src="https://statics.teams.cdn.office.net/sdk/v1.6.0/js/MicrosoftTeams.min.js?v=2.17.0" integrity="sha384-mhp2E+BLMiZLe7rDIzj19WjgXJeI32NkPvrvvZBrMi5IvWup/1NUfS5xuYN5S3VT" crossorigin="anonymous"></script>
+<script src="js/MicrosoftTeams.min.js" crossorigin="anonymous"></script>
 <!-- Check before upgrading your ADAL version, as this sample depends on an internal function to authenticate silently -->
-<script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.17/js/adal.min.js?v=2.17.0" integrity="sha384-BIOS/65fbAsb2XiCCSTlZSTTl0ZgqkOU522dpyk5meOnN2EOQ3uH+QpqEtoAtmBn" crossorigin="anonymous"></script>
+<script src="js/adal.min.js" crossorigin="anonymous"></script>
 <script>
 	INTEAMS = false;
 	microsoftTeams.initialize();     	
@@ -37,9 +34,9 @@
 	});	
 </script>
 
-<script type="text/javascript" src="https://wisa.cachefly.net/external/extjs/4.1.0/ext-all.js"></script>
-<script type="text/javascript" src="https://wisa.cachefly.net/external/extjs/4.1.0/ext-lang-wisa.js"></script>
-<script type="text/javascript" src="https://wisa.cachefly.net/external/xss/cdn.jsdelivr.net_npm_xss@1.0.14_dist_xss.min.js"></script>
+<script type="text/javascript" src="js/ext-all.js"></script>
+<script type="text/javascript" src="js/ext-lang-wisa.js"></script>
+<script type="text/javascript" src="js/cdn.jsdelivr.net_npm_xss%401.0.14_dist_xss.min.js"></script>
 
 <!-- Only after ExtJS is loaded, Ext.ns is needed -->
 
@@ -60,9 +57,9 @@ WISA.CacheFlyConfig.externalsURL="https://wisa.cachefly.net/external/";
 }
 </style>
 
-<script type="text/javascript" src="https://wisa.cachefly.net/external/extensible/1.6.0/extensible-all.js"></script>
-<script type="text/javascript" src="https://wisa.cachefly.net/external/jquery/2.1.3/jquery.js"></script>
-<script type="text/javascript" src="https://wisa.cachefly.net/external/dotdotdot/1.7.4/jquery.dotdotdot.js"></script>
+<script type="text/javascript" src="js/extensible-all.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/jquery.dotdotdot.js"></script>
 <script type="text/javascript" src="js/ux/CheckColumn.js?v=2.17.0"></script>
 <script type="text/javascript" src="js/ux/SelectionColumn.js?v=2.17.0"></script>
 <script type="text/javascript" src="js/ux/RowExpander.js?v=2.17.0"></script>
@@ -103,10 +100,11 @@ WISA.CacheFlyConfig.externalsURL="https://wisa.cachefly.net/external/";
 <script type="text/javascript" src="js/kleurenpicker.js?v=2.17.0"></script>
 <script type="text/javascript" src="js/admincommon.js?v=2.17.0"></script>
 <!--
-<script type="text/javascript" src="js/Forms/config.js"></script> 
+<script type="text/javascript" src="js/Forms/config.js"></script>
 -->
 </head>
 <body>
  <span id="app-msg" class="x-hidden"></span>
-</body>
-</html>
+
+
+</body></html>
