--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 
-<title>Schoolware : Leerlingen</title>
+<title>eokeg : Leerlingen</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <!-- FIRST: STYLE SHEETS-->
 <link rel="stylesheet" type="text/css" href="css/all.css">
