--- a/home.html
+++ b/home.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head><title>Welcome</title></head>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Home</title>
+</head>
 <body>
-  <h1>Welcome to the site!</h1>
-  <p>You are now logged in.</p>
+  <h1>Home Page</h1>
+  <p id="welcome" style="display:none;"></p>
+  <button id="logoutBtn" style="display:none;">Logout</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
