--- a/login.html
+++ b/login.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Signup</title>
+<title>Login</title>
 </head>
 <body>
-  <h1>Sign Up</h1>
-  <form id="signupForm">
+  <h1>Log In</h1>
+  <form id="loginForm">
     <input type="text" id="username" placeholder="Username" required /><br />
     <input type="password" id="password" placeholder="Password" required /><br />
-    <button type="submit">Sign Up</button>
+    <button type="submit">Log In</button>
   </form>
 
   <script src="script.js"></script>
