--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Login</title>
+<title>Log In</title>
 </head>
 <body>
   <h1>Log In</h1>
@@ -12,6 +12,7 @@
     <input type="password" id="password" placeholder="Password" required /><br />
     <button type="submit">Log In</button>
   </form>
+  <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
 
   <script src="script.js"></script>
 </body>
