--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 <title>Home</title>
 </head>
 <body>
-  <h1>Home Page</h1>
+  <h1>Welcome</h1>
   <p id="welcome" style="display:none;"></p>
   <button id="logoutBtn" style="display:none;">Logout</button>
 
