--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Signup</title>
+<title>Sign Up</title>
 </head>
 <body>
   <h1>Sign Up</h1>
@@ -12,6 +12,7 @@
     <input type="password" id="password" placeholder="Password" required /><br />
     <button type="submit">Sign Up</button>
   </form>
+  <p>Already have an account? <a href="login.html">Log In</a></p>
 
   <script src="script.js"></script>
 </body>
