--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
       background: red;
       position: relative;
       transform: rotate(-45deg);
-      animation: rotateHeart 5s linear infinite;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-weight: bold;
+      font-size: 1.2rem;
     }
 
     .heart::before,
@@ -45,12 +50,6 @@
       top: 0;
     }
 
-    @keyframes rotateHeart {
-      0% { transform: rotate(-45deg); }
-      50% { transform: rotate(315deg); }
-      100% { transform: rotate(-45deg); }
-    }
-
     h1 {
       margin-top: 30px;
       font-size: 2rem;
@@ -60,7 +59,7 @@
   </style>
 </head>
 <body>
-  <div class="heart"></div>
+  <div class="heart">B+E</div>
   <h1>Happy 2 Month Anniversary!</h1>
 </body>
 </html>
