--- a/index.html
+++ b/index.html
@@ -2,64 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>2 Month Anniversary</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #ffe6f0;
-      font-family: 'Arial', sans-serif;
-      flex-direction: column;
-    }
-
-    .heart {
-      width: 100px;
-      height: 90px;
-      background: red;
-      position: relative;
-      transform: rotate(-45deg);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-weight: bold;
-      font-size: 1.2rem;
-    }
-
-    .heart::before,
-    .heart::after {
-      content: "";
-      width: 100px;
-      height: 90px;
-      background: red;
-      border-radius: 50%;
-      position: absolute;
-    }
-
-    .heart::before {
-      top: -50px;
-      left: 0;
-    }
-
-    .heart::after {
-      left: 50px;
-      top: 0;
-    }
-
-    h1 {
-      margin-top: 30px;
-      font-size: 2rem;
-      color: #d6336c;
-      text-align: center;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Our 2 Month Anniversary</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="heart">B+E</div>
-  <h1>Happy 2 Month Anniversary!</h1>
+  <div class="heart">
+    <div class="heart-text">B+E</div>
+  </div>
+  <h1>Happy 2 Month Anniversary</h1>
+  <p>I love you so much Eleni</p>
 </body>
 </html>
