--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Our 2 Month Anniversary</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="starboy.png" />
 </head>
 <body>
   <div class="heart">
