--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <h1>Happy 2 Month Anniversary</h1>
   <p>I love you so much Eleni</p>
   
-  <div class="music-player">
-    <h3>Our Song</h3>
+  <div class="music-player>
     <iframe style="border-radius:12px" 
       src="https://open.spotify.com/embed/album/5EbpxRwbbpCJUepbqVTZ1U?utm_source=generator&theme=0" 
       width="100%" 
