--- a/index.html
+++ b/index.html
@@ -14,41 +14,12 @@
   <h1>Happy 2 Month Anniversary</h1>
   <p>I love you so much Eleni</p>
   
-  <div class="music-player"> <!-- Fixed missing quote here -->
+  <div class="music-player">
     <iframe style="border-radius:12px" 
       src="https://open.spotify.com/embed/album/5EbpxRwbbpCJUepbqVTZ1U?utm_source=generator&theme=0" 
       width="100%" 
       height="152" 
-      frameBorder="0"
-      allowfullscreen="" 
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-      loading="lazy">
-    </iframe>
-    <p>The Weeknd - Trilogy</p>
-  </div>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Our 2 Month Anniversary</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="starboy.png" />
-</head>
-<body>
-  <div class="heart">
-    <div class="heart-text">B+E</div>
-  </div>
-  <h1>Happy 2 Month Anniversary</h1>
-  <p>I love you so much Eleni</p>
-  
-  <div class="music-player"> <!-- Fixed missing quote here -->
-    <iframe style="border-radius:12px" 
-      src="https://open.spotify.com/embed/album/5EbpxRwbbpCJUepbqVTZ1U?utm_source=generator&theme=0" 
-      width="100%" 
-      height="152" 
-      frameBorder="0"
+      frameborder="0"
       allowfullscreen="" 
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
       loading="lazy">
