--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
   <link rel="icon" type="image/png" href="starboy.png" />
 </head>
 <body>
-  <div class="heart">
-    <div class="heart-text">B+E</div>
-  </div>
-  <h1>Happy 2 Month Anniversary</h1>
-  <p>I love you so much Eleni</p>
-  
-  <div class="music-player">
-    <iframe style="border-radius:12px" 
-      src="https://open.spotify.com/embed/album/5EbpxRwbbpCJUepbqVTZ1U?utm_source=generator&theme=0" 
-      width="100%" 
-      height="152" 
-      frameborder="0"
-      allowfullscreen="" 
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-      loading="lazy">
-    </iframe>
-    <p>The Weeknd - Trilogy</p>
+  <div class="container">
+    <div class="heart">
+      <div class="heart-text">B+E</div>
+    </div>
+
+    <h1>Happy 2 Month Anniversary</h1>
+    <p>I love you so much Eleni</p>
+
+    <div class="music-player">
+      <iframe style="border-radius:12px" 
+        src="https://open.spotify.com/embed/album/5EbpxRwbbpCJUepbqVTZ1U?utm_source=generator&theme=0" 
+        width="100%" 
+        height="152" 
+        frameborder="0"
+        allowfullscreen="" 
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+        loading="lazy">
+      </iframe>
+      <p>The Weeknd - Trilogy</p>
+    </div>
   </div>
 </body>
 </html>
