--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     </div>
 
     <h1>Happy 2 Month Anniversary</h1>
-    <p>I love you so much Eleni</p>
+    <p>I love you so much <span class="glow-name">Eleni</span></p>
 
     <div class="music-player">
       <iframe style="border-radius:12px" 
         src="https://open.spotify.com/embed/album/5EbpxRwbbpCJUepbqVTZ1U?utm_source=generator&theme=0" 
         width="100%" 
         height="152" 
-        frameborder="0"
+        frameBorder="0"
         allowfullscreen="" 
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
         loading="lazy">
